Add GroupEntity and GroupDTO
